[package]
name = "db_ip"
authors = ["Finn Bear"]
version = "0.3.7"
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/finnbear/db_ip/"
description = "An (unofficial) Rust library for querying db-ip.com data"

[features]
default = ["ipv4", "ipv6", "include-country-code-lite", "include-region-lite"]
region = ["db_ip_core/region"]
ipv4 = ["db_ip_core/ipv4"]
ipv6 = ["db_ip_core/ipv6"]
serde = ["db_ip_core/serde"]
nightly = []
download-country-lite = ["chrono", "flate2", "reqwest", "bincode"]
include-country-code-lite = ["download-country-lite", "serde", "serde_1", "db_ip_core/bincode"]
include-region-lite = ["download-country-lite", "region", "serde", "serde_1", "db_ip_core/bincode"]

[package.metadata.docs.rs]
features = ["ipv4", "ipv6", "serde", "region"]
no-default-features = true

[dependencies]
csv = {version = "1.1", optional = true}
doc-comment = "0.3"
db_ip_core = {path = "db_ip_core", version="0.3.0"}
bincode = {version = "=1.3", optional=true}

[dev-dependencies]
serde_json = "1.0"

[build-dependencies]
reqwest = {version = "0.11", features=["blocking", "rustls-tls"], default-features=false, optional=true}
flate2 = {version="1.0", optional=true}
chrono = {version = "0.4", optional=true}
db_ip_core = {path = "db_ip_core", version="0.3.1", features=["csv", "serde"]}
bincode = {version = "=1.3", optional=true}
serde_1 = {package = "serde", version = "1.0", optional=true}