[package]
name = "db_ip_core"
authors = ["Finn Bear"]
version = "0.3.1"
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/finnbear/db_ip"
description = "Implementation of db_ip"

[features]
region = ["db_ip_macros/region"]
ipv4 = []
ipv6 = []
nightly = []

[dependencies]
csv = {version = "1.1", optional = true}
serde = {version = "1.0", features=["derive"], optional=true}
doc-comment = "0.3"
db_ip_macros = {path = "../db_ip_macros", version="0.3.0", optional = true}
bincode = {version = "1.3", optional=true}