[package]
name = "db_ip_macros"
authors = ["Finn Bear"]
version = "0.2.0"
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/finnbear/db_ip"
description = "Macros for db_ip"

[lib]
proc-macro = true

[features]
region = []

[dependencies]
syn = "1.0"
quote = "1.0"
proc-macro2 = "1.0"
locale-codes = "0.3"